[tool.poetry]
name = "cse3-final-project"
version = "0.1.0"
description = ""
authors = ["Nathan Angelo B. Cruz <nate.a.b.cross@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.34.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
